syntax = "proto3";

import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";


option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityRole {
	rpc ReadSecurityRole(SecurityRoleRequest) returns (SecurityRolePayload);
	rpc CreateSecurityRole(SecurityRolePayload) returns (google.protobuf.Empty);
	rpc UpdateSecurityRole(SecurityRolePayload) returns (google.protobuf.Empty);
	rpc DeleteSecurityRole(SecurityRolePayload) returns (google.protobuf.Empty);
}

message SecurityRoleRequest{
		string Id=1;
	}

	message SecurityRolePayload {
		string Id = 1;
        string Role = 2;      
        bool IsInactive = 3;

	}